--- a/DesignPage1.css
+++ b/DesignPage1.css
@@ -1,82 +1,64 @@
-.body
-{
-    background-color: white;
+.body {
+  background-color: white;
 }
 
-.page-header
-{
-    
-    height: 70px;
-    background-color: #f2f2f2;
-    
-} 
-
-.page-logo{
-    position:relative;
-    top:15px;
-    left:10px;
-}
-.page-nav
-{
-    height:81px;
+.page-header {
+  height: 70px;
+  background-color: #f2f2f2;
 }
 
- .page-content
-{
-    justify-content: center;
-    position:relative;
-    left:30%;
-    
-} 
-
-.page-context
-{
-    justify-content:center;
-    margin: 20px;
-    position:relative;
-    left:20%;
-
+.page-logo {
+  position: relative;
+  top: 15px;
+  left: 10px;
+}
+.page-nav {
+  height: 81px;
 }
 
-.page-logo1
-{
-    margin-left: 130px;
+.page-content {
+  justify-content: center;
+  position: relative;
+  left: 30%;
+}
+
+.page-context {
+  justify-content: center;
+  margin: 20px;
+  position: relative;
+  left: 20%;
+}
+
+.page-logo1 {
+  margin-left: 130px;
 }
 
 /* Container holding the image and the text */
 .container {
-    
-    position: relative;
+  position: relative;
+}
 
-  }
-  
-  /* Bottom right text */
-  .text-block {
-    position: absolute;
-    top:80px;
-    left:40%;
-    opacity: 100%;
-    color: white;
-    padding-left: 20px;
-    padding-right: 20px;
-  }
+/* Bottom right text */
+.text-block {
+  position: absolute;
+  top: 80px;
+  left: 40%;
+  opacity: 100%;
+  color: white;
+  padding-left: 20px;
+  padding-right: 20px;
+}
 
-  .container1
-  {
-    position:absolute;
-    bottom:20px;
-    left:180px;
-    margin: 20px;
-    display:flex;
-    
-
-  }
-  .images
-  {
-    border:20px solid white;
-  }
-
-
+.container1 {
+  position: absolute;
+  bottom: 20px;
+  left: 180px;
+  margin: 20px;
+  display: flex;
+}
+.images {
+  border: 20px solid white;
+}
 
 /* .flex-items
 {
@@ -90,19 +72,15 @@
     
 }  */
 
+h1 {
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  font-size: 70px;
+  color: #fff;
+}
 
-  h1{
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    font-size:70px;
-    color: #fff;
-  }
-
-  .footer
-  {
-    height:105px;
-    background-color:#333333;
-    text-align: center;
-    color:white;
-  }
-
- 
+.footer {
+  height: 105px;
+  background-color: #333333;
+  text-align: center;
+  color: white;
+}
